# b2share

./: .bowerrc  .dockerignore  .gitignore  .travis-devel-requirements.txt  .travis-release-requirements.txt  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  DEVENV.md  Dockerfile  Gruntfile.js  INSTALL.rst  LICENSE  MANIFEST.in  Makefile.am  README.md  README.rst  b2share_requirements.txt  bower-base.json  bower.json  configure.ac  deploy_overlay.sh  devenvrc  docker-compose-dev.yml  docker-compose.full.yml  docker-compose.yml  docker-services.yml  entry_points.txt  manage.py  package.json  pyproject.toml  pytest.ini  requirements-b2share.txt  requirements-dev.txt  requirements-devel.txt  requirements.in  requirements.txt  run-tests.sh  setup.cfg  (+3 more)
b2share/: __init__.py  celery.py  cli.py  config.py  factory.py  main.py  utils.py  version.py  wsgi.py  wsgi_api.py  wsgi_ui.py
certs/: g_cacert.pem
ci-docker/: docker-test.sh
demo/: README.rst  re-import.sh  setup.py
deployment/: collections.sql  deploy-demo-sh.sh  deploy_overlay-rh.sh  deploy_overlay.sh  recreate-ssdev-invenio.sh  update-help.sh  update-ss.sh
devenv/: docker-compose.yml  docker_env.sh  env.sh  init.sh  run_demo.sh  setenv.sh  start_here.sh
dockerize/: Dockerfile  b2share-celery.sh  b2share.sh  create_nginx_conf.sh  docker-compose.yml  run_docker.sh  supervisord.conf  uwsgi.ini
dockerize-repository/: README.md  docker-compose.yml
docs/: Makefile  README_documentation.rst  administration.rst  api.rst  architecture.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  make.bat
(+952 files in other folders)
