[tool.poetry]
name = "b2share"
version = "0.1.0"
description = ""
authors = ["Harry Kodden <harry@kodden.nl>"]

[tool.poetry.dependencies]
python = ">=3.6,<3.8"
invenio = ">=3.3.0 <3.4.0"
invenio-assets = ">=1.1.3"
invenio-pidrelations = "v1.0.0a4"
invenio-oauth2server = "<1.3.0,>=1.2.0"
invenio-records-rest = "<1.8.0,>=1.7.1"
invenio-records-ui = "<1.2.0,>=1.1.0"
invenio-deposit = "v1.0.0a11"
invenio-marc21 = "v1.0.0a9"
invenio-accounts-rest = ">=v1.0.0a4"
invenio-search = ">=1.4.1"
invenio-oaiserver = ">=1.2.0"
invenio-oauthclient = "^1.4.0"
invenio-queues = "^1.0.0-alpha.3"
invenio-previewer = "1.2.1"
invenio-stats = ">=1.0.0a18"
b2handle = ">=1.1.2"
doschema = "v1.0.0a1"
dcxml = ">=0.1.2"
datacite = ">=0.2.0"
nbconvert = "<6.0.0,>=4.1.0"
mistune = ">=0.8.1,<2"
easywebdav2 = ">=1.3.0"
elasticsearch = ">=7.3.0"
elasticsearch_dsl = ">=7.3.0"
tornado = "<=5.1.1,>=4.1"
jsmin = ">=2.1.6"
Wand = ">=0.4.4"
Flask-IIIF = ">=0.6.1"
simplejson = ">=-3.17.2"
SQLAlchemy = ">=1.3.20"
zope = ">=5.1"
Flask-Testing = "^0.8.0"
psycopg2-binary = "^2.8.6"
importlib = "^1.0.4"
invenio-i18n = "1.2.0"
invenio-theme = "^1.3.4"
responses = "^0.12.1"
httplib2 = "^0.18.1"
invenio-indexer = "1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
Flask-Testing = "^0.8.0"
coverage = "^5.3"
pytest-runner = "^5.2"
pytest-invenio = "^1.4.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^2.10"
pytest-mock = "^3.3.1"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

